# liblyric

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README  build.sh  json.lyric  test.lrc  test.lyric  uncrustify.cfg
lib/: CMakeLists.txt  buffer.c  buffer.h  helpers.h  json-arraylist.c  json-arraylist.h  json-linkhash.c  json-linkhash.h  json-object.c  json-object.h  json-parser.c  json-parser.h  json-private.h  json-util.c  json-util.h  json.h  line.c  line.h  lrc_parser.c  lrc_parser.h  lyric.c  lyric.h  parser.c  parser.h  property.c  property.h  sentence.c  sentence.h  singer.c  singer.h  tag.c  tag.h  tags.c  tags.h  time.c  time.h  word.c  word.h
src/: CMakeLists.txt  lrc_check.c  lyric_check.c
utils/: leak.py
